@@ -1,126 +1,30 @@
 package ch.picard.ppimapbuilder.data.interaction.client.web;
 
+import ch.picard.ppimapbuilder.data.Pair;
 import ch.picard.ppimapbuilder.data.interaction.client.web.miql.MiQLExpressionBuilder;
 import ch.picard.ppimapbuilder.data.interaction.client.web.miql.MiQLParameterBuilder;
+import ch.picard.ppimapbuilder.data.organism.InParanoidOrganismRepository;
 import ch.picard.ppimapbuilder.data.organism.Organism;
+import ch.picard.ppimapbuilder.data.organism.OrganismUtils;
 import ch.picard.ppimapbuilder.data.protein.Protein;
 import ch.picard.ppimapbuilder.data.protein.ProteinUtils;
-import com.google.common.collect.Lists;
+import ch.picard.ppimapbuilder.util.ProgressMonitor;
+import ch.picard.ppimapbuilder.util.concurrency.ConcurrentExecutor;
+import ch.picard.ppimapbuilder.util.concurrency.ExecutorServiceManager;
 import psidev.psi.mi.tab.model.BinaryInteraction;
 import psidev.psi.mi.tab.model.CrossReference;
 import psidev.psi.mi.tab.model.Interactor;
 import uk.ac.ebi.enfin.mi.cluster.EncoreInteraction;
 import uk.ac.ebi.enfin.mi.cluster.InteractionCluster;
 
-import java.io.UnsupportedEncodingException;
-import java.net.URLEncoder;
 import java.util.*;
+import java.util.concurrent.Callable;
 
 /**
  * Group of method useful for manipulation of interaction list
  */
 public class InteractionUtils {
 
-	/**
-	 * Retrieve all interactions with the given interactors (optimized and threaded)
-	 */
-	public static List<BinaryInteraction> getInteractionsInProteinPool(Set<Protein> proteins, Organism sourceOrganism,
-	                                                                   ThreadedPsicquicSimpleClient psicquicClient) throws Exception {
-		if (proteins.size() <= 1)
-			return new ArrayList<BinaryInteraction>();
-
-		List<Protein> sourceProteins = Lists.newArrayList(proteins);
-		MiQLExpressionBuilder baseQuery = new MiQLExpressionBuilder();
-		baseQuery.setRoot(true);
-		baseQuery.addCondition(MiQLExpressionBuilder.Operator.AND, new MiQLParameterBuilder("species", sourceOrganism.getTaxId()));
-
-		// baseInteractionQuery.addParam(new MiQLParameterBuilder("type",
-		// "association"));
-
-		// Create idA and idB parameters
-		MiQLParameterBuilder idA, idB;
-		MiQLExpressionBuilder prots = new MiQLExpressionBuilder();
-		{
-			for (Protein protein : proteins)
-				prots.add(protein.getUniProtId());
-			idA = new MiQLParameterBuilder("idA", prots);
-			idB = new MiQLParameterBuilder("idB", prots);
-		}
-
-		// Calculate the estimated url query length
-		final int BASE_URL_LENGTH = 100;
-		int estimatedURLQueryLength = 0;
-		int idParamLength = 0, baseParamLength = 0;
-		{
-			try {
-				idParamLength = URLEncoder.encode(idB.toString(), "UTF-8").length() + URLEncoder.encode(idA.toString(), "UTF-8").length();
-				baseParamLength = URLEncoder.encode(baseQuery.toString(), "UTF-8").length();
-
-				estimatedURLQueryLength = BASE_URL_LENGTH + baseParamLength + idParamLength;
-			} catch (UnsupportedEncodingException e) {
-				e.printStackTrace();
-			}
-		}
-
-		// Slice the query in multiple queries if the result MiQL query is
-		// bigger than maxQuerySize
-		final List<String> queries = new ArrayList<String>();
-		final int MAX_QUERY_SIZE = BASE_URL_LENGTH + baseParamLength + 950;//TODO check difference in result when changing url length
-		{
-			if (estimatedURLQueryLength > MAX_QUERY_SIZE) {
-
-				final int STEP_LENGTH = (int) Math.ceil((double) (MAX_QUERY_SIZE - BASE_URL_LENGTH - baseParamLength) * sourceProteins.size()
-						/ (double) idParamLength);
-				final int NB_TRUNCATION = (int) Math.ceil((double) sourceProteins.size() / (double) STEP_LENGTH);
-
-				//System.out.println("N# proteins: " + sourceProteins.size());
-				//System.out.println("N# queries: " + NB_TRUNCATION);
-
-				// Generate truncated protein listing
-				// Ex: "prot1", "prot2", "prot3", "prot4" => ("prot1", "prot2"), ("prot3", "prot4")
-				final List<MiQLExpressionBuilder> protsExprs = new ArrayList<MiQLExpressionBuilder>();
-				int pos = 0;
-				for (int i = 0; i < NB_TRUNCATION; i++) {
-					int from = pos;
-					int to = Math.min(from + STEP_LENGTH, sourceProteins.size());
-
-					MiQLExpressionBuilder protsTruncated = new MiQLExpressionBuilder();
-					for (Protein protein : sourceProteins.subList(from, to))
-						protsTruncated.add(protein.getUniProtId());
-					protsExprs.add(protsTruncated);
-
-					pos = to;
-				}
-				MiQLExpressionBuilder protsIdA, protsIdB;
-				for (int i = 0; i < protsExprs.size(); i++) {
-					protsIdA = protsExprs.get(i);
-					//System.out.println(protsIdA);
-
-					for (int j = i; j < protsExprs.size(); j++) {
-						protsIdB = protsExprs.get(j);
-						MiQLExpressionBuilder q = new MiQLExpressionBuilder(baseQuery);
-						q.addCondition(MiQLExpressionBuilder.Operator.AND, new MiQLParameterBuilder("idA", protsIdA));
-						q.addCondition(MiQLExpressionBuilder.Operator.AND, new MiQLParameterBuilder("idB", protsIdB));
-						queries.add(q.toString());
-						//System.out.println(q);
-					}
-				}
-			} else {
-				baseQuery.addCondition(MiQLExpressionBuilder.Operator.AND, idA);
-				baseQuery.addCondition(MiQLExpressionBuilder.Operator.AND, idB);
-				queries.add(baseQuery.toString());
-			}
-			System.gc();
-		}
-
-		//System.out.println(queries.size());
-
-		// Executing all MiQL queries using ThreadedPsicquicSimpleClient
-		List<BinaryInteraction> results = new ArrayList<BinaryInteraction>();
-		results.addAll(psicquicClient.getByQueries(queries));
-
-		return results;
-	}
 
 	/**
 	 * Uses to cluster interaction using MiCluster
@@ -134,38 +38,70 @@ public class InteractionUtils {
 		return cluster.getInteractionMapping().values();
 	}
 
+	public static Protein getProteinInteractor(Interactor interactor) {
+		String id = null;
+
+		for (CrossReference reference : interactor.getIdentifiers()) {
+			if (reference.getDatabase().equals("uniprotkb")) {
+				id = reference.getIdentifier();
+				break;
+			}
+		}
+
+		Organism org = OrganismUtils.findOrganismInMITABTaxId(
+				InParanoidOrganismRepository.getInstance(),
+				interactor.getOrganism().getTaxid()
+		);
+
+		if (id != null && org != null)
+			return new Protein(id, org);
+		return null;
+	}
+
+	public static Pair<Protein> getInteractors(BinaryInteraction interaction) {
+		Interactor interactorA = interaction.getInteractorA();
+		Interactor interactorB = interaction.getInteractorB();
+
+		return new Pair<Protein>(
+				getProteinInteractor(interactorA),
+				getProteinInteractor(interactorB)
+		);
+	}
+
 	/**
 	 * Retrieve only interactors from list of interactions
 	 */
-	public static Set<String> getInteractorsBinary(List<BinaryInteraction> interactions) {
-		HashSet<String> interactors = new HashSet<String>();
-		List<BinaryInteraction> copyInteractions = new ArrayList<BinaryInteraction>(interactions);
+	public static HashSet<Protein> getInteractors(Collection<BinaryInteraction> interactions) {
+		HashSet<Protein> interactors = new HashSet<Protein>();
 
-
-		// Interaction filtering
-		InteractionUtils.filter(
-				copyInteractions,
-				new InteractionUtils.UniProtInteractionFilter()
-		);
 		for (BinaryInteraction interaction : interactions) {
-			interactors.add(interaction.getInteractorA().getIdentifiers().get(0).getIdentifier());
-			interactors.add(interaction.getInteractorB().getIdentifiers().get(0).getIdentifier());
+			final Pair<Protein> interactorPair = getInteractors(interaction);
+			if (interactorPair.isNotNull()) {
+				interactors.add(interactorPair.getFirst());
+				interactors.add(interactorPair.getSecond());
+			}
 		}
 
 		return interactors;
 	}
 
-	public static abstract class InteractionFilter {
-		public boolean isValidInteraction(BinaryInteraction interaction) {
-			return true;
-		}
+	public static interface InteractionFilter {
+		public boolean isValidInteraction(BinaryInteraction interaction);
+	}
 
-		public boolean isValidInteractor(Interactor interactor) {
-			return true;
+	public static abstract class InteractorFilter implements InteractionFilter {
+		public abstract boolean isValidInteractor(Interactor interactor);
+
+		@Override
+		public boolean isValidInteraction(BinaryInteraction interaction) {
+			Interactor interactorA = interaction.getInteractorA();
+			Interactor interactorB = interaction.getInteractorB();
+			return  isValidInteractor(interactorA)
+					&& isValidInteractor(interactorB);
 		}
 	}
 
-	public static final class OrganismInteractionFilter extends InteractionFilter {
+	public static final class OrganismInteractionFilter extends InteractorFilter {
 		private final Organism organism;
 
 		public OrganismInteractionFilter(Organism organism) {
@@ -174,12 +110,16 @@ public class InteractionUtils {
 
 		@Override
 		public boolean isValidInteractor(Interactor interactor) {
-			return interactor.getOrganism().getTaxid().equals(String.valueOf(organism.getTaxId()));
+			return organism.equals(
+					OrganismUtils.findOrganismInMITABTaxId(
+							InParanoidOrganismRepository.getInstance(),
+							interactor.getOrganism().getTaxid()
+					)
+			);
 		}
-
 	}
 
-	public static final class UniProtInteractionFilter extends InteractionFilter {
+	public static final class UniProtInteractionFilter extends InteractorFilter {
 		@Override
 		public boolean isValidInteractor(Interactor interactor) {
 			final List<CrossReference> ids = interactor.getIdentifiers();
@@ -191,9 +131,11 @@ public class InteractionUtils {
 			CrossReference uniprot = null;
 			boolean hasUniprot = false;
 			for (CrossReference ref : ids) {
-				final boolean isUniprot = ref.getDatabase().equals("uniprotkb");
-				final boolean idValid = ProteinUtils.UniProtId.isValid(ref.getIdentifier());
-				hasUniprot = hasUniprot || (isUniprot && idValid);
+				hasUniprot = hasUniprot || (
+						ref.getDatabase().equals("uniprotkb") // Is UniProt
+								&&
+								ProteinUtils.UniProtId.isValid(ref.getIdentifier()) // Valid UniProt
+				);
 				if (hasUniprot) {
 					uniprot = ref;
 					break;
@@ -213,34 +155,58 @@ public class InteractionUtils {
 		}
 	}
 
+	public static boolean isValidInteraction(BinaryInteraction interaction, InteractionFilter... filters) {
+		for (InteractionFilter filter : filters)
+			if (!filter.isValidInteraction(interaction))
+				return false;
+		return true;
+	}
+
 	/**
 	 * Filter a List of BinaryInteraction to keep only the interaction satisfying the filters InteractionFilter
+	 *
 	 * @param interactions
 	 * @param filters
 	 */
-	public static void filter(List<BinaryInteraction> interactions, InteractionFilter... filters) {
-		ArrayList<BinaryInteraction> invalidInteractions = new ArrayList<BinaryInteraction>();
-		interactionLoop : for (BinaryInteraction interaction : interactions) {
+	public static ArrayList<BinaryInteraction> filter(List<BinaryInteraction> interactions, InteractionFilter... filters) {
+		ArrayList<BinaryInteraction> validInteractions = new ArrayList<BinaryInteraction>();
+		for (BinaryInteraction interaction : interactions)
+			if (isValidInteraction(interaction, filters))
+				validInteractions.add(interaction);
+		return validInteractions;
+	}
 
-			for (InteractionFilter filter : filters) {
-				if(!filter.isValidInteraction(interaction)) {
-					invalidInteractions.add(interaction);
-					continue interactionLoop;
-				}
-			}
-
-			for (Interactor interactor : Arrays.asList(new Interactor[]{interaction.getInteractorA(),
-					interaction.getInteractorB()})) {
-
-				for (InteractionFilter filter : filters) {
-					if(!filter.isValidInteractor(interactor)) {
-						invalidInteractions.add(interaction);
-						continue interactionLoop;
+	public static ArrayList<BinaryInteraction> filterConcurrently(
+			ExecutorServiceManager executorServiceManager,
+			final List<BinaryInteraction> interactions,
+			final ProgressMonitor progressMonitor,
+			final InteractionFilter... filters
+	) {
+		final ArrayList<BinaryInteraction> validInteractions = new ArrayList<BinaryInteraction>();
+		final double[] percent = new double[]{0d};
+		final double size = interactions.size();
+		new ConcurrentExecutor<Boolean>(executorServiceManager, interactions.size()) {
+			@Override
+			public Callable<Boolean> submitRequests(final int index) {
+				return new Callable<Boolean>() {
+					@Override
+					public Boolean call() throws Exception {
+						if (progressMonitor != null) {
+							double progress = Math.floor((index / size) * 100) / 100;
+							if (progress > percent[0])
+								progressMonitor.setProgress(percent[0] = progress);
+						}
+						return isValidInteraction(interactions.get(index), filters);
 					}
-				}
+				};
 			}
-		}
-		interactions.removeAll(invalidInteractions);
+
+			@Override
+			public void processResult(Boolean result, Integer index) {
+				if (result) validInteractions.add(interactions.get(index));
+			}
+		}.run();
+		return validInteractions;
 	}
 
 	public static String generateMiQLQueryIDTaxID(final String id, final Integer taxId) {
@@ -254,49 +220,12 @@ public class InteractionUtils {
 		return query.toString();
 	}
 
-	/*
-	//Converts a Collection&lt;EncoreInteraction&gt; into a Collection&lt;BinaryInteraction&lt;Interactor&gt;&gt;
-	public static Collection<BinaryInteraction> convertEncoreInteraction(Collection<EncoreInteraction> interactions) {
-		List<BinaryInteraction> convertedInteractions = new ArrayList<BinaryInteraction>(interactions.size());
-		Iterator<EncoreInteraction> it = interactions.iterator();
-		Encore2Binary converter = new Encore2Binary();
-		while (it.hasNext()) {
-			EncoreInteraction encoreInteraction = (EncoreInteraction) it.next();
-			convertedInteractions.add(converter.getBinaryInteraction(encoreInteraction));
+	public static List<String> psicquicServicesToStrings(List<PsicquicService> services) {
+		ArrayList<String> out = new ArrayList<String>();
+		for (PsicquicService service : services) {
+			out.add(service.getName());
 		}
-		return convertedInteractions;
+		return out;
 	}
 
-	//Converts a Collection&lt;BinaryInteraction&lt;Interactor&gt;&gt; into a Collection&lt;EncoreInteraction&gt;
-	public static Collection<EncoreInteraction> convertBinaryInteraction(Collection<BinaryInteraction> interactions) {
-		List<EncoreInteraction> convertedInteractions = new ArrayList<EncoreInteraction>(interactions.size());
-		Iterator<BinaryInteraction> it = interactions.iterator();
-		Binary2Encore converter = new Binary2Encore();
-		while (it.hasNext()) {
-			BinaryInteraction binaryInteraction = (BinaryInteraction) it.next();
-			convertedInteractions.add(converter.getEncoreInteraction(binaryInteraction));
-		}
-		return convertedInteractions;
-	}
-
-	//Retrieve only interactors from list of interactions
-	public static Set<String> getInteractorsEncore(List<EncoreInteraction> interactions) {
-		HashSet<String> interactors = new HashSet<String>();
-
-		for (EncoreInteraction interaction : interactions) {
-			if (interaction.getInteractorAccsA().containsKey("uniprotkb")) {
-				String id = interaction.getInteractorAccsA().get("uniprotkb");
-				if (ProteinUtils.UniProtId.isValid(id))
-					interactors.add(id);
-			}
-			if (interaction.getInteractorAccsB().containsKey("uniprotkb")) {
-				String id = interaction.getInteractorAccsB().get("uniprotkb");
-				if (ProteinUtils.UniProtId.isValid(id))
-					interactors.add(id);
-			}
-		}
-
-		return interactors;
-	}
-	*/
 }
